# mcp-folk

./: .gitignore  .mcpbignore  CLAUDE.md  CODEOWNERS  LICENSE  Makefile  README.md  manifest.json  pyproject.toml
.github/workflows/: build-bundle.yml  ci.yml
src/mcp_folk/: __init__.py  api_client.py  api_models.py  server.py
tests/: __init__.py  test_api_client.py  test_api_models.py
